--- a/llm_model1.ipynb
+++ b/llm_model1.ipynb
@@ -1,9 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "aaa0fb06",
+   "metadata": {},
+   "source": [
+    "This model aims to generate resturant name and menu items using a simple LLM model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "c50efe12-9284-444c-b62f-0ff3b3e6d728",
+   "execution_count": 1,
+   "id": "1551d4c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "id": "216cfd77-d9ff-4909-bed9-eb99379cf9a8",
    "metadata": {},
    "outputs": [],
@@ -24,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "id": "b87308c3",
    "metadata": {},
    "outputs": [],
@@ -39,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "id": "e2e170d2-63ad-4895-a19c-63b064d6b9db",
    "metadata": {},
    "outputs": [
@@ -49,29 +57,29 @@
      "text": [
       "\n",
       "\n",
-      "\"La Cantina de Mexico\"\n"
+      "\"El Sabroso Cocina Mexicana\"\n"
      ]
     }
    ],
    "source": [
     "llm = OpenAI(openai_api_key=openapi_key, temperature=0.6)\n",
-    "name = llm(\" I want to open a resturant for Mexican food. Suggest a fancy name based on cuisine\")\n",
+    "name = llm.invoke(\" I want to open a resturant for Mexican food. Suggest a fancy name based on cuisine\")\n",
     "print(name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "id": "fbf884e9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'I want to open a resturant for Mexican food. Suggest a fancy name based on country'"
+       "'I want to open a resturant for Mexican food. Suggest a fancy name based on cuisine'"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,17 +95,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "id": "dc046184",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'\\n\\n\"Casa de México\" '"
+       "{'resturant_name': 'Mexican',\n",
+       " 'text': '\\n\\n1. Tacos (beef, chicken, fish, or vegetarian options)\\n2. Burritos (with choice of filling)\\n3. Enchiladas (chicken, beef, or cheese)\\n4. Quesadillas (cheese, chicken, or veggie)\\n5. Fajitas (beef, chicken, or vegetable)\\n6. Nachos (with choice of meat or vegetarian toppings)\\n7. Tamales (pork, chicken, or vegetarian)\\n8. Chimichangas (shredded beef or chicken)\\n9. Chiles Rellenos (stuffed peppers)\\n10. Carne Asada (grilled steak)\\n11. Carnitas (slow-cooked pork)\\n12. Pozole (traditional Mexican soup with hominy and meat)\\n13. Sopes (thick tortillas topped with beans, meat, and salsa)\\n14. Flautas (crispy rolled tacos with choice of filling)\\n15. Mexican Rice and Beans (classic side dishes)\\n16. Guacamole and Chips (authentic appetizer)\\n17. Tostadas (crispy flat tortillas with toppings)\\n18. Churros (fried dough pastry rolled in cinnamon sugar)\\n19. Horchata (traditional Mexican rice'}"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,12 +114,12 @@
    "source": [
     "from langchain.chains import LLMChain\n",
     "chain = LLMChain(llm=llm, prompt=prompt_template_name)\n",
-    "chain.run(\"Mexican\")"
+    "chain.invoke(\"Mexican\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 7,
    "id": "36fd00d0",
    "metadata": {},
    "outputs": [],
@@ -130,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 8,
    "id": "62ef3993",
    "metadata": {},
    "outputs": [
@@ -138,36 +147,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "\n",
-      "1. Spicy Chicken Tikka Masala\n",
-      "2. Lamb Vindaloo\n",
-      "3. Vegetable Biryani\n",
-      "4. Tandoori Shrimp\n",
-      "5. Aloo Gobi (potato and cauliflower curry)\n",
-      "6. Paneer Butter Masala\n",
-      "7. Chana Masala (chickpea curry)\n",
-      "8. Chicken Korma\n",
-      "9. Samosas (deep-fried pastry filled with spiced potatoes and peas)\n",
-      "10. Garlic Naan (garlic-flavored flatbread)\n",
-      "11. Mango Lassi (yogurt-based drink with mango puree)\n",
-      "12. Palak Paneer (spinach and cheese curry)\n",
-      "13. Chicken Biryani\n",
-      "14. Dal Makhani (creamy lentil curry)\n",
-      "15. Papri Chaat (crispy dough wafers topped with chickpeas, potatoes, yogurt, and chutney)\n"
+      "{'input': 'Indian', 'output': '\\n\\n1. Tandoori Chicken Tikka\\n2. Lamb Vindaloo\\n3. Butter Chicken\\n4. Vegetable Samosas\\n5. Garlic Naan\\n6. Saag Paneer\\n7. Chana Masala\\n8. Chicken Biryani\\n9. Dal Makhani\\n10. Mango Lassi\\n11. Aloo Gobi\\n12. Papdi Chaat\\n13. Malai Kofta\\n14. Rogan Josh\\n15. Palak Paneer\\n16. Gulab Jamun\\n17. Chicken Tikka Masala\\n18. Vegetable Biryani\\n19. Bhindi Masala\\n20. Kheer (Indian rice pudding)'}\n"
      ]
     }
    ],
    "source": [
     "from langchain.chains import SimpleSequentialChain\n",
     "chain = SimpleSequentialChain(chains =[name_chain,food_items_chain])\n",
-    "response = chain.run(\"Indian\")\n",
+    "response = chain.invoke(\"Indian\")\n",
     "print (response)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 9,
    "id": "9e666b05",
    "metadata": {},
    "outputs": [],
@@ -187,27 +180,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 10,
    "id": "57706d84",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\skshe\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\langchain_core\\_api\\deprecation.py:119: LangChainDeprecationWarning: The method `Chain.__call__` was deprecated in langchain 0.1.0 and will be removed in 0.2.0. Use invoke instead.\n",
-      "  warn_deprecated(\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "{'cuisine': {'cuisine : chinese'},\n",
-       " 'resturant_name': '\\n\\n\"Imperial Dragon Dining\"',\n",
-       " 'menu_items': \"\\n\\n1. General Tso's Chicken\\n2. Mongolian Beef\\n3. Kung Pao Shrimp\\n4. Vegetable Lo Mein\\n5. Sweet and Sour Pork\\n6. Orange Chicken\\n7. Szechuan Tofu\\n8. Honey Walnut Shrimp\\n9. Fried Rice with Egg and Vegetables\\n10. Hot and Sour Soup\\n11. Egg Rolls\\n12. Sesame Noodles\\n13. Beef and Broccoli\\n14. Chicken Chow Mein\\n15. Peking Duck\\n16. Crab Rangoon\\n17. Ma Po Tofu\\n18. Steamed Dumplings\\n19. Moo Shu Pork\\n20. Shrimp Fried Rice\"}"
+       " 'resturant_name': '\\n\\n\"Dragon\\'s Delight\"',\n",
+       " 'menu_items': \"\\n\\n1. Fire-breathing Dragon Burger\\n2. Dragon Wing Platter\\n3. Dragon's Breath Chili\\n4. Charred Dragon Steak\\n5. Dragon Egg Salad\\n6. Dragon Scale Nachos\\n7. Roasted Dragon Tail Sandwich\\n8. Dragonfire Pasta\\n9. Fiery Dragon Curry\\n10. Dragon Claw Tacos\\n11. Grilled Dragonfruit Salad\\n12. Spicy Dragon Ramen\\n13. Dragon's Nest Omelette\\n14. Flame-grilled Dragon Shrimp\\n15. Dragon's Hoard Fries (topped with cheese, bacon, and jalapenos)\\n16. Dragon's Blood BBQ Ribs\\n17. Dragonfire Pizza\\n18. Dragon's Lair Stir-Fry\\n19. Sizzling Dragon Skewers\\n20. Dragon's Breath Cocktail (made with spicy tequila and dragonfruit juice).\"}"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +204,7 @@
     "    input_variables = [\"cuisine\"],\n",
     "    output_variables = [\"resturant_name\",\"menu_items\"]\n",
     ")\n",
-    "chain({\"cuisine : chinese\"})"
+    "chain.invoke({\"cuisine : chinese\"})"
    ]
   },
   {
