--- a/llm_model1.ipynb
+++ b/llm_model1.ipynb
@@ -5,7 +5,7 @@
    "id": "aaa0fb06",
    "metadata": {},
    "source": [
-    "This model aims to generate resturant name and menu items using a simple LLM model"
+    "This model aims to generate restaurant name and menu items using a simple LLM model"
    ]
   },
   {
@@ -57,13 +57,13 @@
      "text": [
       "\n",
       "\n",
-      "\"El Sabroso Cocina Mexicana\"\n"
+      "\"El Sabor de México\" (The Flavor of Mexico)\n"
      ]
     }
    ],
    "source": [
     "llm = OpenAI(openai_api_key=openapi_key, temperature=0.6)\n",
-    "name = llm.invoke(\" I want to open a resturant for Mexican food. Suggest a fancy name based on cuisine\")\n",
+    "name = llm.invoke(\" I want to open a restaurant for Mexican food. Suggest a fancy name based on cuisine\")\n",
     "print(name)"
    ]
   },
@@ -76,7 +76,7 @@
     {
      "data": {
       "text/plain": [
-       "'I want to open a resturant for Mexican food. Suggest a fancy name based on cuisine'"
+       "'I want to open a restaurant for Mexican food. Suggest a fancy name based on cuisine'"
       ]
      },
      "execution_count": 5,
@@ -88,25 +88,33 @@
     "from langchain.prompts import PromptTemplate\n",
     "prompt_template_name = PromptTemplate(\n",
     "    input_variables=[\"cuisine\"],\n",
-    "    template=\"I want to open a resturant for {cuisine} food. Suggest a fancy name based on cuisine\"\n",
+    "    template=\"I want to open a restaurant for {cuisine} food. Suggest a fancy name based on cuisine\"\n",
     ")\n",
     "prompt_template_name.format(cuisine =\"Mexican\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "dc046184",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\skshe\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\langchain_core\\_api\\deprecation.py:119: LangChainDeprecationWarning: The class `LLMChain` was deprecated in LangChain 0.1.17 and will be removed in 0.3.0. Use RunnableSequence, e.g., `prompt | llm` instead.\n",
+      "  warn_deprecated(\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "{'resturant_name': 'Mexican',\n",
-       " 'text': '\\n\\n1. Tacos (beef, chicken, fish, or vegetarian options)\\n2. Burritos (with choice of filling)\\n3. Enchiladas (chicken, beef, or cheese)\\n4. Quesadillas (cheese, chicken, or veggie)\\n5. Fajitas (beef, chicken, or vegetable)\\n6. Nachos (with choice of meat or vegetarian toppings)\\n7. Tamales (pork, chicken, or vegetarian)\\n8. Chimichangas (shredded beef or chicken)\\n9. Chiles Rellenos (stuffed peppers)\\n10. Carne Asada (grilled steak)\\n11. Carnitas (slow-cooked pork)\\n12. Pozole (traditional Mexican soup with hominy and meat)\\n13. Sopes (thick tortillas topped with beans, meat, and salsa)\\n14. Flautas (crispy rolled tacos with choice of filling)\\n15. Mexican Rice and Beans (classic side dishes)\\n16. Guacamole and Chips (authentic appetizer)\\n17. Tostadas (crispy flat tortillas with toppings)\\n18. Churros (fried dough pastry rolled in cinnamon sugar)\\n19. Horchata (traditional Mexican rice'}"
+       "{'cuisine': 'Mexican',\n",
+       " 'text': '\\n\\n\"El Sabroso Cocina Mexicana\" (translates to \"The Delicious Mexican Kitchen\")'}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,12 +135,12 @@
     "llm = OpenAI(openai_api_key=openapi_key, temperature=0.6)\n",
     "prompt_template_name = PromptTemplate(\n",
     "    input_variables=[\"cuisine\"],\n",
-    "    template=\"I want to open a resturant for {cuisine} food. Suggest a fancy name based on cuisine\"\n",
+    "    template=\"I want to open a restaurant for {cuisine} food. Suggest a fancy name based on cuisine\"\n",
     ")\n",
     "name_chain =LLMChain(llm=llm, prompt=prompt_template_name)\n",
     "prompt_template_name = PromptTemplate(\n",
-    "    input_variables=[\"resturant_name\"],\n",
-    "    template=\"Suggest some menu items for {resturant_name} food. Return it as a list\"\n",
+    "    input_variables=[\"restaurant_name\"],\n",
+    "    template=\"Suggest some menu items for {restaurant_name} food. Return it as a list\"\n",
     ")\n",
     "food_items_chain = LLMChain(llm=llm, prompt=prompt_template_name)\n"
    ]
@@ -147,7 +155,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'input': 'Indian', 'output': '\\n\\n1. Tandoori Chicken Tikka\\n2. Lamb Vindaloo\\n3. Butter Chicken\\n4. Vegetable Samosas\\n5. Garlic Naan\\n6. Saag Paneer\\n7. Chana Masala\\n8. Chicken Biryani\\n9. Dal Makhani\\n10. Mango Lassi\\n11. Aloo Gobi\\n12. Papdi Chaat\\n13. Malai Kofta\\n14. Rogan Josh\\n15. Palak Paneer\\n16. Gulab Jamun\\n17. Chicken Tikka Masala\\n18. Vegetable Biryani\\n19. Bhindi Masala\\n20. Kheer (Indian rice pudding)'}\n"
+      "{'input': 'Indian', 'output': '\\n\\n1. Spicy Chicken Curry\\n2. Vegetable Biryani\\n3. Lamb Vindaloo\\n4. Tandoori Chicken\\n5. Samosas\\n6. Garlic Naan\\n7. Chana Masala\\n8. Paneer Tikka Masala\\n9. Aloo Gobi\\n10. Mango Lassi\\n11. Chicken Tikka Masala\\n12. Palak Paneer\\n13. Vegetable Korma\\n14. Lamb Rogan Josh\\n15. Chicken Biryani\\n16. Butter Chicken\\n17. Dal Makhani\\n18. Gajar Halwa (carrot dessert)\\n19. Papdi Chaat\\n20. Masala Chai'}\n"
      ]
     }
    ],
@@ -168,12 +176,12 @@
     "llm = OpenAI(openai_api_key=openapi_key, temperature=0.7)\n",
     "prompt_template_name = PromptTemplate(\n",
     "    input_variables=[\"cuisine\"],\n",
-    "    template=\"I want to open a resturant for {cuisine} food. Suggest a fancy name based on cuisine\"\n",
+    "    template=\"I want to open a restaurant for {cuisine} food. Suggest a fancy name based on cuisine\"\n",
     ")\n",
-    "name_chain =LLMChain(llm=llm, prompt=prompt_template_name, output_key=\"resturant_name\")\n",
+    "name_chain =LLMChain(llm=llm, prompt=prompt_template_name, output_key=\"restaurant_name\")\n",
     "prompt_template_name = PromptTemplate(\n",
-    "    input_variables=[\"resturant_name\"],\n",
-    "    template=\"Suggest some menu items for {resturant_name} food. Return it as a list\"\n",
+    "    input_variables=[\"restaurant_name\"],\n",
+    "    template=\"Suggest some menu items for {restaurant_name} food. Return it as a list\"\n",
     ")\n",
     "food_items_chain = LLMChain(llm=llm, prompt=prompt_template_name,output_key=\"menu_items\")"
    ]
@@ -188,8 +196,8 @@
      "data": {
       "text/plain": [
        "{'cuisine': {'cuisine : chinese'},\n",
-       " 'resturant_name': '\\n\\n\"Dragon\\'s Delight\"',\n",
-       " 'menu_items': \"\\n\\n1. Fire-breathing Dragon Burger\\n2. Dragon Wing Platter\\n3. Dragon's Breath Chili\\n4. Charred Dragon Steak\\n5. Dragon Egg Salad\\n6. Dragon Scale Nachos\\n7. Roasted Dragon Tail Sandwich\\n8. Dragonfire Pasta\\n9. Fiery Dragon Curry\\n10. Dragon Claw Tacos\\n11. Grilled Dragonfruit Salad\\n12. Spicy Dragon Ramen\\n13. Dragon's Nest Omelette\\n14. Flame-grilled Dragon Shrimp\\n15. Dragon's Hoard Fries (topped with cheese, bacon, and jalapenos)\\n16. Dragon's Blood BBQ Ribs\\n17. Dragonfire Pizza\\n18. Dragon's Lair Stir-Fry\\n19. Sizzling Dragon Skewers\\n20. Dragon's Breath Cocktail (made with spicy tequila and dragonfruit juice).\"}"
+       " 'restaurant_name': '\\n\\n\"Dragon\\'s Delight\"',\n",
+       " 'menu_items': \"\\n\\n1. Fiery Dragon Wings\\n2. Dragon Scale Salad with Grilled Shrimp\\n3. Spicy Dragon Sushi Roll\\n4. Fire-Breathing Dragon Burger\\n5. Dragon Egg Drop Soup\\n6. Dragonfire Chicken Stir-Fry\\n7. Dragon Breath Chili\\n8. Dragon's Tail Pasta with Spicy Arrabbiata Sauce\\n9. Dragon's Hoard Platter (combination of various spicy meats and vegetables)\\n10. Dragon's Blood Cocktail (spicy Bloody Mary with a twist)\\n11. Dragon Claw Tacos\\n12. Dragon's Roar BBQ Ribs\\n13. Dragon's Breath Curry\\n14. Dragon Scale Nachos with Spicy Queso\\n15. Dragon's Fury Pizza (topped with hot peppers, pepperoni, and spicy sausage)\"}"
       ]
      },
      "execution_count": 10,
@@ -202,7 +210,7 @@
     "chain = SequentialChain(\n",
     "    chains = [name_chain,food_items_chain],\n",
     "    input_variables = [\"cuisine\"],\n",
-    "    output_variables = [\"resturant_name\",\"menu_items\"]\n",
+    "    output_variables = [\"restaurant_name\",\"menu_items\"]\n",
     ")\n",
     "chain.invoke({\"cuisine : chinese\"})"
    ]
